# picture_to_spine

./: .gitattributes  .gitignore  AGENTS.md  AI_README.md  Cargo.toml  FlashToSpine-开发入口.cmd  PROJECT_MEMORY.md  README.md  package-lock.json  package.json  rust-toolchain.toml  单图生成Spine动画工具设计方案.md
.github/workflows/: ci.yml
apps/desktop-ui/: index.html  package.json
apps/desktop/src-tauri/: Cargo.toml
apps/desktop/src-tauri/src/: diagnostics_export.rs  ipc_host.rs  local_security.rs  main.rs  spine_cli_host.rs
config/: remote-gpu.example.json
config/sandbox/: windows-appcontainer-v1.json
crates/adapters/: Cargo.toml
crates/adapters/src/: lib.rs
crates/adapters/src/export/: atlas_manifest.rs  cli_policy.rs  cli_runner.rs  materialize.rs  mod.rs  package.rs  psd.rs  rig_ir.rs  spine42.rs
crates/adapters/src/image/: bounded_inspector.rs  full_decode.rs  layer_raster.rs  mod.rs
crates/adapters/src/ipc/: framing.rs  mock.rs  mod.rs  webview.rs
crates/adapters/src/observability/: jsonl_audit.rs  local_event_sink.rs  mod.rs
crates/adapters/src/safety/: diagnostics.rs  mod.rs  private_remote.rs  windows_credentials.rs  worker_eligibility.rs
crates/adapters/src/storage/: cas.rs  fs_project_store.rs  journal.rs  migration.rs  mod.rs  ntfs_atomic.rs  recovery.rs  redb_index.rs
crates/adapters/tests/: export_open_formats.rs  image_import.rs  private_remote_contract.rs  project_integrity.rs  safety_boundaries.rs  spine_cli_runner.rs  storage_ipc.rs  windows_credentials.rs
crates/adapters/tests/fixtures/: synthetic_spine.rs
crates/application/: Cargo.toml
crates/domain/: Cargo.toml
docs/compliance/: F2S-EXTERNAL-SYSTEMS-001.json  F2S-LICENSE-REVIEW-PLAYBOOK-001.md  F2S-SUPPLY-INVENTORY-001.json
docs/decisions/: F2S-ADR-DELIVERY-002.md  F2S-INTEGRATION-TARGET-001.md  F2S-TOOLCHAIN-BASELINE-001.md
docs/limits/: known-limitations.md
docs/maintenance/: operations.md  schema-and-migration.md
plan/: 00-项目索引与计划治理.md  02-需求规格与验收标准.md  04-用户流程与信息架构.md  06-系统架构与设计模式.md  09-领域逻辑与工作流编排.md  16-工程规范代码组织与协作.md  17-异常恢复兼容与项目升级.md  18-交付发布安装更新与双击入口.md  19-风险登记与应对.md  21-需求设计任务测试追踪矩阵.md  22-逐文件评分与统筹整改记录.md  24-架构决策ADR与未决事项.md
schemas/: generate.mjs
(+734 files in other folders)
