[workspace]
members = [
  "crates/domain",
  "crates/application",
  "crates/adapters",
  "apps/desktop/src-tauri"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "LicenseRef-Proprietary-Internal"

[workspace.dependencies]
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
sha2 = "=0.10.9"
image = { version = "=0.25.10", default-features = false, features = ["png", "jpeg", "webp"] }
base64 = "=0.22.1"
thiserror = "=2.0.18"
uuid = { version = "=1.23.4", features = ["serde", "v4"] }
webview2-com = "=0.39.1"
windows = { version = "=0.62.2", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Security_Credentials", "Win32_Security_Cryptography", "Win32_System_Com", "Win32_System_LibraryLoader", "Win32_System_SystemInformation", "Win32_UI_Controls_Dialogs", "Win32_UI_HiDpi", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Shell", "Win32_UI_Shell_Common", "Win32_UI_WindowsAndMessaging"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
