[package]
name = "flash-to-spine-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "FlashToSpine"
path = "src/main.rs"

[dependencies]
f2s-application = { path = "../../../crates/application" }
f2s-domain = { path = "../../../crates/domain" }
f2s-adapters = { path = "../../../crates/adapters" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
base64.workspace = true
webview2-com.workspace = true
windows.workspace = true
uuid.workspace = true
